handlin api validation