@@ -1,5 +1,7 @@
 package dominik.nadgodziny.domain.overtime;
 
+import dominik.nadgodziny.domain.overtime.exception.ErrorMessages;
+import dominik.nadgodziny.domain.overtime.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.DataAccessException;
 
@@ -13,10 +15,15 @@ import java.util.stream.Stream;
 class OvertimeReaderService implements OvertimeReader {
 
     private final OvertimeRepository overtimeRepository;
+
     @Override
     public List<Overtime> findAllOvertimes() {
         try {
-            return overtimeRepository.findAll();
+            List<Overtime> all = overtimeRepository.findAll();
+            if (all.isEmpty()){
+                throw new NotFoundException(ErrorMessages.NOT_FOUND.getMessage());
+            }
+            return all;
         } catch (DataAccessException e) {
             ConsoleWriter.printText("Błąd dostępu do danych: " + e.getMessage());
             return Collections.emptyList();
@@ -43,11 +50,11 @@ class OvertimeReaderService implements OvertimeReader {
                     .filter(o -> o.getOvertimeDate().getYear() == year)
                     .filter(o -> o.getOvertimeDate().getMonthValue() == month)
                     .toList();
-            isEmptyOrNot(overtimeList);
+            isEmptyConsoleInfo(overtimeList);
             return overtimeList;
         } catch (DataAccessException e) {
             ConsoleWriter.printText("Błąd dostępu do danych: " + e.getMessage());
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
@@ -81,10 +88,9 @@ class OvertimeReaderService implements OvertimeReader {
     @Override
     public List<Overtime> sortAllOvertimesById() {
         try {
-            ConsoleWriter.printText("\n\n\n\nLista wszystkich nadgodzin:");
             List<Overtime> allOvertimes = findAllOvertimes();
             Stream<Overtime> sorted = getSorted(allOvertimes);
-            isEmptyOrNot(allOvertimes);
+            isEmptyConsoleInfo(allOvertimes);
             return sorted.toList();
         } catch (DataAccessException e) {
             ConsoleWriter.printText("Błąd dostępu do danych: " + e.getMessage());
@@ -93,12 +99,12 @@ class OvertimeReaderService implements OvertimeReader {
 
     }
 
-    private static Stream<Overtime> getSorted(List<Overtime> allOvertimes) {
+    Stream<Overtime> getSorted(List<Overtime> allOvertimes) {
         return allOvertimes.stream()
                 .sorted(Comparator.comparingLong(Overtime::getId));
     }
 
-     void isEmptyOrNot(List<Overtime> byMonthOvertimeDate) {
+    void isEmptyConsoleInfo(List<Overtime> byMonthOvertimeDate) {
         if (byMonthOvertimeDate.isEmpty()) {
             ConsoleWriter.printText("Nie znaleziono danych ");
         }
